@@ -66,24 +66,18 @@ import static uk.gov.hmcts.darts.arm.util.PropertyConstants.ArchiveRecordPropert
 @Component
 @RequiredArgsConstructor
 @Slf4j
-@SuppressWarnings({"PMD.GodClass"})
+@SuppressWarnings({"PMD.GodClass", "PMD.CyclomaticComplexity"})
 public class AnnotationArchiveRecordMapperImpl implements AnnotationArchiveRecordMapper {
 
     private static final String CASE_LIST_DELIMITER = "|";
     private final ArmDataManagementConfiguration armDataManagementConfiguration;
     private final CurrentTimeHelper currentTimeHelper;
     private Properties annotationRecordProperties;
-
     private DateTimeFormatter dateTimeFormatter;
-    private DateTimeFormatter dateFormatter;
-
 
     @Override
-    public AnnotationArchiveRecord mapToAnnotationArchiveRecord(ExternalObjectDirectoryEntity externalObjectDirectory,
-                                                                String rawFilename) {
+    public AnnotationArchiveRecord mapToAnnotationArchiveRecord(ExternalObjectDirectoryEntity externalObjectDirectory, String rawFilename) {
         dateTimeFormatter = DateTimeFormatter.ofPattern(armDataManagementConfiguration.getDateTimeFormat());
-        dateFormatter = DateTimeFormatter.ofPattern(armDataManagementConfiguration.getDateFormat());
-
         try {
             loadAnnotationProperties();
             AnnotationDocumentEntity annotationDocument = externalObjectDirectory.getAnnotationDocumentEntity();
@@ -92,9 +86,7 @@ public class AnnotationArchiveRecordMapperImpl implements AnnotationArchiveRecor
             return createAnnotationArchiveRecord(annotationCreateArchiveRecordOperation, uploadNewFileRecord);
         } catch (IOException e) {
             log.error(
-                "Unable to read annotation property file {} - {}",
-                armDataManagementConfiguration.getAnnotationRecordPropertiesFile(),
-                e.getMessage());
+                "Unable to read annotation property file {} - {}", armDataManagementConfiguration.getAnnotationRecordPropertiesFile(), e.getMessage());
         }
         return null;
     }
@@ -123,7 +115,6 @@ public class AnnotationArchiveRecordMapperImpl implements AnnotationArchiveRecor
             .build();
     }
 
-    @SuppressWarnings({"PMD.CyclomaticComplexity", "PMD.CognitiveComplexity", "PMD.NPathComplexity"})
     private RecordMetadata createArchiveRecordMetadata(ExternalObjectDirectoryEntity externalObjectDirectory) {
         AnnotationDocumentEntity annotationDocument = externalObjectDirectory.getAnnotationDocumentEntity();
         OffsetDateTime retainUntilTs = annotationDocument.getRetainUntilTs();
@@ -131,9 +122,10 @@ public class AnnotationArchiveRecordMapperImpl implements AnnotationArchiveRecor
             .publisher(armDataManagementConfiguration.getPublisher())
             .recordClass(armDataManagementConfiguration.getAnnotationRecordClass())
             .recordDate(formatDateTime(currentTimeHelper.currentOffsetDateTime()))
-            .eventDate(formatDateTime(nonNull(retainUntilTs)
-                                          ? retainUntilTs.minusYears(armDataManagementConfiguration.getEventDateAdjustmentYears())
-                                          : annotationDocument.getUploadedDateTime()))
+            .eventDate(formatDateTime(
+                nonNull(retainUntilTs) ? retainUntilTs.minusYears(armDataManagementConfiguration.getEventDateAdjustmentYears())
+                    : annotationDocument.getUploadedDateTime()))
+
             .region(armDataManagementConfiguration.getRegion())
             .title(annotationDocument.getFileName())
             .clientId(String.valueOf(externalObjectDirectory.getId()))
@@ -144,79 +136,47 @@ public class AnnotationArchiveRecordMapperImpl implements AnnotationArchiveRecor
         if (nonNull(courthouse) && nonNull(courtroom)) {
             metadata.setContributor(courthouse + " & " + courtroom);
         }
-
         if (nonNull(annotationDocument.getRetConfReason())) {
             metadata.setRetentionConfidenceReason(annotationDocument.getRetConfReason());
         }
-
         if (nonNull(annotationDocument.getRetConfScore())) {
             metadata.setRetentionConfidenceScore(annotationDocument.getRetConfScore().getId());
         }
-
-        if (annotationRecordProperties.containsKey(BF_001_KEY)) {
-            metadata.setBf001(mapToString(annotationRecordProperties.getProperty(BF_001_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_002_KEY)) {
-            metadata.setBf002(mapToString(annotationRecordProperties.getProperty(BF_002_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_003_KEY)) {
-            metadata.setBf003(mapToString(annotationRecordProperties.getProperty(BF_003_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_004_KEY)) {
-            metadata.setBf004(mapToString(annotationRecordProperties.getProperty(BF_004_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_005_KEY)) {
-            metadata.setBf005(mapToString(annotationRecordProperties.getProperty(BF_005_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_006_KEY)) {
-            metadata.setBf006(mapToString(annotationRecordProperties.getProperty(BF_006_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_007_KEY)) {
-            metadata.setBf007(mapToString(annotationRecordProperties.getProperty(BF_007_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_008_KEY)) {
-            metadata.setBf008(mapToString(annotationRecordProperties.getProperty(BF_008_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_009_KEY)) {
-            metadata.setBf009(mapToString(annotationRecordProperties.getProperty(BF_009_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_010_KEY)) {
-            metadata.setBf010(mapToString(annotationRecordProperties.getProperty(BF_010_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_011_KEY)) {
-            metadata.setBf011(mapToString(annotationRecordProperties.getProperty(BF_011_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_012_KEY)) {
-            metadata.setBf012(mapToInt(annotationRecordProperties.getProperty(BF_012_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_013_KEY)) {
-            metadata.setBf013(mapToInt(annotationRecordProperties.getProperty(BF_013_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_014_KEY)) {
-            metadata.setBf014(mapToInt(annotationRecordProperties.getProperty(BF_014_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_015_KEY)) {
-            metadata.setBf015(mapToInt(annotationRecordProperties.getProperty(BF_015_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_016_KEY)) {
-            metadata.setBf016(mapToString(annotationRecordProperties.getProperty(BF_016_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_017_KEY)) {
-            metadata.setBf017(mapToString(annotationRecordProperties.getProperty(BF_017_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_018_KEY)) {
-            metadata.setBf018(mapToString(annotationRecordProperties.getProperty(BF_018_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_019_KEY)) {
-            metadata.setBf019(mapToString(annotationRecordProperties.getProperty(BF_019_KEY), annotationDocument));
-        }
-        if (annotationRecordProperties.containsKey(BF_020_KEY)) {
-            metadata.setBf020(mapToString(annotationRecordProperties.getProperty(BF_020_KEY), annotationDocument));
-        }
+        setMetadataProperties(metadata, annotationDocument);
         return metadata;
     }
 
-    @SuppressWarnings({"PMD.CyclomaticComplexity"})
+    private void setMetadataProperties(RecordMetadata metadata, AnnotationDocumentEntity annotationDocument) {
+        for (String key : annotationRecordProperties.stringPropertyNames()) {
+            String value = mapToString(annotationRecordProperties.getProperty(key), annotationDocument);
+            if (nonNull(value)) {
+                switch (key) {
+                    case BF_001_KEY -> metadata.setBf001(value);
+                    case BF_002_KEY -> metadata.setBf002(value);
+                    case BF_003_KEY -> metadata.setBf003(value);
+                    case BF_004_KEY -> metadata.setBf004(value);
+                    case BF_005_KEY -> metadata.setBf005(value);
+                    case BF_006_KEY -> metadata.setBf006(value);
+                    case BF_007_KEY -> metadata.setBf007(value);
+                    case BF_008_KEY -> metadata.setBf008(value);
+                    case BF_009_KEY -> metadata.setBf009(value);
+                    case BF_010_KEY -> metadata.setBf010(value);
+                    case BF_011_KEY -> metadata.setBf011(value);
+                    case BF_012_KEY -> metadata.setBf012(mapToInt(value, annotationDocument));
+                    case BF_013_KEY -> metadata.setBf013(mapToInt(value, annotationDocument));
+                    case BF_014_KEY -> metadata.setBf014(mapToInt(value, annotationDocument));
+                    case BF_015_KEY -> metadata.setBf015(mapToInt(value, annotationDocument));
+                    case BF_016_KEY -> metadata.setBf016(value);
+                    case BF_017_KEY -> metadata.setBf017(value);
+                    case BF_018_KEY -> metadata.setBf018(value);
+                    case BF_019_KEY -> metadata.setBf019(value);
+                    case BF_020_KEY -> metadata.setBf020(value);
+                    default -> log.warn("Annotation archive record unknown property key: {}", key);
+                }
+            }
+        }
+    }
+
     private String mapToString(String key, AnnotationDocumentEntity annotationDocument) {
         return switch (key) {
             case OBJECT_TYPE_KEY -> ArchiveRecordType.ANNOTATION_ARCHIVE_TYPE.getArchiveTypeDescription();
@@ -252,7 +212,7 @@ public class AnnotationArchiveRecordMapperImpl implements AnnotationArchiveRecor
     private String getHearingDate(AnnotationDocumentEntity annotationDocument) {
         String hearingDate = null;
         if (CollectionUtils.isNotEmpty(annotationDocument.getAnnotation().getHearingList())) {
-            hearingDate = OffsetDateTime.of(annotationDocument.getAnnotation().getHearingList().get(0).getHearingDate().atTime(0, 0, 0),
+            hearingDate = OffsetDateTime.of(annotationDocument.getAnnotation().getHearingList().getFirst().getHearingDate().atTime(0, 0, 0),
                                             ZoneOffset.UTC).format(dateTimeFormatter);
         }
         return hearingDate;
@@ -284,7 +244,7 @@ public class AnnotationArchiveRecordMapperImpl implements AnnotationArchiveRecor
     private static String getCourtroom(AnnotationDocumentEntity annotationDocument) {
         String courtroom = null;
         if (CollectionUtils.isNotEmpty(annotationDocument.getAnnotation().getHearingList())) {
-            courtroom = annotationDocument.getAnnotation().getHearingList().get(0).getCourtroom().getName();
+            courtroom = annotationDocument.getAnnotation().getHearingList().getFirst().getCourtroom().getName();
         }
         return courtroom;
     }
